--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
        </div>
 
        <div class="col-md-4 top-nav ">
-            <ul class="">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="training.html">Training</a></li>
-                <li><a href="software.html">Software</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+           <ul class="">
+               <li><a href="index.html">Home</a></li>
+               <li><a href="trainingStudents.html">Training</a></li>
+               <li><a href="software.html">Software</a></li>
+               <li><a href="about.html">About</a></li>
+           </ul>
        </div>
 
    </header>
